--- a/ui-ngx/src/assets/locale/locale.constant-en_US.json
+++ b/ui-ngx/src/assets/locale/locale.constant-en_US.json
@@ -216,7 +216,7 @@
         "domain-name": "Domain name",
         "domain-name-unique": "Domain name and protocol need to unique.",
         "domain-name-max-length": "Domain name should be less than 256",
-        "error-verification-url": "A domain name shouldn't contain symbols '/' and ':'. Example: thingsboard.io",
+        "error-verification-url": "A domain name shouldn't contain symbols '/' and ':'. Example: iothub.io",
         "connection-settings": "Connection settings",
         "oauth2": {
           "access-token-uri": "Access token URI",
@@ -1296,8 +1296,8 @@
         "make-private-dashboard-title": "Are you sure you want to make the dashboard '{{dashboardTitle}}' private?",
         "make-private-dashboard-text": "After the confirmation the dashboard will be made private and won't be accessible by others.",
         "make-private-dashboard": "Make dashboard private",
-        "socialshare-text": "'{{dashboardTitle}}' powered by ThingsBoard",
-        "socialshare-title": "'{{dashboardTitle}}' powered by ThingsBoard",
+        "socialshare-text": "'{{dashboardTitle}}' powered by IOTHub",
+        "socialshare-title": "'{{dashboardTitle}}' powered by IOTHub",
         "select-dashboard": "Select dashboard",
         "no-dashboards-matching": "No dashboards matching '{{entity}}' were found.",
         "dashboard-required": "Dashboard is required.",
@@ -3837,12 +3837,12 @@
         "configuration-app": "Configuration app",
         "configuration-step": {
             "prepare-environment-title": "Prepare development environment",
-            "prepare-environment-text": "Flutter ThingsBoard Mobile Application requires Flutter SDK. Follow instructions to set up Flutter SDK.",
+            "prepare-environment-text": "Flutter IOTHub Mobile Application requires Flutter SDK. Follow instructions to set up Flutter SDK.",
             "get-source-code-title": "Get app source code",
-            "get-source-code-text": "You can get Flutter ThingsBoard Mobile Application source code by cloning it from the GitHub repository:",
-            "configure-api-title": "Configure ThingsBoard API endpoint",
-            "configure-api-text": "Open the flutter_thingsboard_app project in your editor/IDE. Edit:",
-            "configure-api-hint": "Set the value of the thingsBoardApiEndpoint constant to match the API endpoint of your ThingsBoard server instance. Do not use “localhost” or “127.0.0.1” hostnames.",
+            "get-source-code-text": "You can get Flutter IOTHub Mobile Application source code by cloning it from the GitHub repository:",
+            "configure-api-title": "Configure IOTHub API endpoint",
+            "configure-api-text": "Open the flutter_iothub_app project in your editor/IDE. Edit:",
+            "configure-api-hint": "Set the value of the iotHubApiEndpoint constant to match the API endpoint of your IOTHub server instance. Do not use “localhost” or “127.0.0.1” hostnames.",
             "run-app-title": "Run the app",
             "run-app-text": "Run the app as described in your IDE.\nIf using the terminal, run the app with the following command:",
             "more-information": "Detailed information may be found in our Getting Started documentation.",
@@ -5492,7 +5492,7 @@
         "tenant-required": "Tenant is required",
         "search": "Search tenants",
         "selected-tenants": "{ count, plural, =1 {1 tenant} other {# tenants} } selected",
-        "isolated-tb-rule-engine": "Use isolated ThingsBoard Rule Engine queues",
+        "isolated-tb-rule-engine": "Use isolated IOTHub Rule Engine queues",
         "isolated-tb-rule-engine-details": "Each tenant will have dedicated Rule Engine queues"
     },
     "tenant-profile": {
@@ -9209,7 +9209,7 @@
         },
         "functions": {
             "title": "Functions",
-            "pe-feature-tooltip": "Only on ThingsBoard\nProfessional Edition",
+            "pe-feature-tooltip": "Only on IOTHub\nProfessional Edition",
             "switch-to-pe": "Switch to PE",
             "alarms": "Alarms",
             "dashboards": "Dashboards",
